Correct spacing between 'Post' and 'Cancel' buttons
The spacing was lost when the cancel button was moved
into the <publish-annotation-btn> directive.

Card 89

--- a/h/static/styles/publish-annotation-btn.scss
+++ b/h/static/styles/publish-annotation-btn.scss
@@ -1,6 +1,5 @@
 .publish-annotation-btn {
   display: flex;
-  margin-right: 5px;
 
   &__btn {
     width: 250px;
@@ -13,6 +12,7 @@
 
 .publish-annotation-cancel-btn {
   $color: #bbb;
+  margin-left: 5px;
 
   color: $color;
   font-weight: normal;
